--- a/index.html
+++ b/index.html
@@ -106,7 +106,150 @@
         </div>
     </header>
     <main>
-      
+      <!-- The Legal Practice Area section -->
+      <section class="text-center">
+        <h1 class="mt-28 font-eb-garamond font-extrabold text-4xl">The Legal Practice Area</h1>
+        <p class="mb-16 mt-6 font-poppins font-normal text-base">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+        <div class="mx-auto grid grid-cols-1 lg:grid-cols-3 place-items-center">
+          <!-- card 1  -->
+          <div class="">
+            <div class="bg-gradient-to-b from-[#F3F3F3] card bg-base-100 w-full shadow-xl border mb-5">
+              <figure class="px-10 pt-10">
+                <img
+                  src="images/business.png"
+                  alt="Shoes"
+                  class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="text-3xl font-eb-garamond font-extrabold">Business Law</h2>
+                <p class="font-poppins font-normal text-base ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <div class="card-actions">
+                  <button><svg width="32.500000" height="32.500000" viewBox="0 0 32.5 32.5" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <defs/>
+                    <path id="Vector" d="M16.25 0C7.27 0 0 7.27 0 16.25C0 25.22 7.27 32.5 16.25 32.5C25.22 32.5 32.5 25.22 32.5 16.25C32.5 7.27 25.22 0 16.25 0ZM23.38 17.13C23.61 16.89 23.74 16.58 23.74 16.25C23.74 15.91 23.61 15.6 23.38 15.36L18.38 10.36C18.26 10.24 18.13 10.14 17.97 10.07C17.82 10 17.65 9.97 17.49 9.96C17.32 9.96 17.15 9.99 17 10.05C16.84 10.12 16.7 10.21 16.58 10.33C16.46 10.45 16.37 10.59 16.3 10.75C16.24 10.9 16.21 11.07 16.21 11.24C16.22 11.4 16.25 11.57 16.32 11.72C16.39 11.88 16.49 12.01 16.61 12.13L19.48 15L10 15C9.66 15 9.35 15.13 9.11 15.36C8.88 15.6 8.75 15.91 8.75 16.25C8.75 16.58 8.88 16.89 9.11 17.13C9.35 17.36 9.66 17.5 10 17.5L19.48 17.5L16.61 20.36C16.49 20.48 16.39 20.61 16.32 20.77C16.25 20.92 16.22 21.09 16.21 21.25C16.21 21.42 16.24 21.59 16.3 21.74C16.37 21.9 16.46 22.04 16.58 22.16C16.7 22.28 16.84 22.37 17 22.44C17.15 22.5 17.32 22.53 17.49 22.53C17.65 22.52 17.82 22.49 17.97 22.42C18.13 22.35 18.26 22.25 18.38 22.13L23.38 17.13Z" fill="#B68C5A" fill-opacity="1.000000" fill-rule="evenodd"/>
+                  </svg>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- card 2 -->
+          <div class="">
+            <div class="bg-gradient-to-b from-[#F3F3F3] card bg-base-100 w-full shadow-xl border mb-5">
+              <figure class="px-10 pt-10">
+                <img
+                  src="images/criminal.png"
+                  alt="Shoes"
+                  class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="text-3xl font-eb-garamond font-extrabold">Criminal Law</h2>
+                <p class="font-poppins font-normal text-base ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <div class="card-actions">
+                  <button><svg width="32.500000" height="32.500000" viewBox="0 0 32.5 32.5" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <defs/>
+                    <path id="Vector" d="M16.25 0C7.27 0 0 7.27 0 16.25C0 25.22 7.27 32.5 16.25 32.5C25.22 32.5 32.5 25.22 32.5 16.25C32.5 7.27 25.22 0 16.25 0ZM23.38 17.13C23.61 16.89 23.74 16.58 23.74 16.25C23.74 15.91 23.61 15.6 23.38 15.36L18.38 10.36C18.26 10.24 18.13 10.14 17.97 10.07C17.82 10 17.65 9.97 17.49 9.96C17.32 9.96 17.15 9.99 17 10.05C16.84 10.12 16.7 10.21 16.58 10.33C16.46 10.45 16.37 10.59 16.3 10.75C16.24 10.9 16.21 11.07 16.21 11.24C16.22 11.4 16.25 11.57 16.32 11.72C16.39 11.88 16.49 12.01 16.61 12.13L19.48 15L10 15C9.66 15 9.35 15.13 9.11 15.36C8.88 15.6 8.75 15.91 8.75 16.25C8.75 16.58 8.88 16.89 9.11 17.13C9.35 17.36 9.66 17.5 10 17.5L19.48 17.5L16.61 20.36C16.49 20.48 16.39 20.61 16.32 20.77C16.25 20.92 16.22 21.09 16.21 21.25C16.21 21.42 16.24 21.59 16.3 21.74C16.37 21.9 16.46 22.04 16.58 22.16C16.7 22.28 16.84 22.37 17 22.44C17.15 22.5 17.32 22.53 17.49 22.53C17.65 22.52 17.82 22.49 17.97 22.42C18.13 22.35 18.26 22.25 18.38 22.13L23.38 17.13Z" fill="#B68C5A" fill-opacity="1.000000" fill-rule="evenodd"/>
+                  </svg>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- card 3 -->
+          <div class="">
+            <div class="bg-gradient-to-b from-[#F3F3F3] card bg-base-100 w-full shadow-xl border mb-5">
+              <figure class="px-10 pt-10">
+                <img
+                  src="images/child.png"
+                  alt="Shoes"
+                  class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="text-3xl font-eb-garamond font-extrabold">Child Support</h2>
+                <p class="font-poppins font-normal text-base ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <div class="card-actions">
+                  <button><svg width="32.500000" height="32.500000" viewBox="0 0 32.5 32.5" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <defs/>
+                    <path id="Vector" d="M16.25 0C7.27 0 0 7.27 0 16.25C0 25.22 7.27 32.5 16.25 32.5C25.22 32.5 32.5 25.22 32.5 16.25C32.5 7.27 25.22 0 16.25 0ZM23.38 17.13C23.61 16.89 23.74 16.58 23.74 16.25C23.74 15.91 23.61 15.6 23.38 15.36L18.38 10.36C18.26 10.24 18.13 10.14 17.97 10.07C17.82 10 17.65 9.97 17.49 9.96C17.32 9.96 17.15 9.99 17 10.05C16.84 10.12 16.7 10.21 16.58 10.33C16.46 10.45 16.37 10.59 16.3 10.75C16.24 10.9 16.21 11.07 16.21 11.24C16.22 11.4 16.25 11.57 16.32 11.72C16.39 11.88 16.49 12.01 16.61 12.13L19.48 15L10 15C9.66 15 9.35 15.13 9.11 15.36C8.88 15.6 8.75 15.91 8.75 16.25C8.75 16.58 8.88 16.89 9.11 17.13C9.35 17.36 9.66 17.5 10 17.5L19.48 17.5L16.61 20.36C16.49 20.48 16.39 20.61 16.32 20.77C16.25 20.92 16.22 21.09 16.21 21.25C16.21 21.42 16.24 21.59 16.3 21.74C16.37 21.9 16.46 22.04 16.58 22.16C16.7 22.28 16.84 22.37 17 22.44C17.15 22.5 17.32 22.53 17.49 22.53C17.65 22.52 17.82 22.49 17.97 22.42C18.13 22.35 18.26 22.25 18.38 22.13L23.38 17.13Z" fill="#B68C5A" fill-opacity="1.000000" fill-rule="evenodd"/>
+                  </svg>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- card 4 -->
+          <div class="">
+            <div class="bg-gradient-to-b from-[#F3F3F3] card bg-base-100 w-fit shadow-xl border">
+              <figure class="px-10 pt-10">
+                <img
+                  src="images/education.png"
+                  alt="Shoes"
+                  class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="text-3xl font-eb-garamond font-extrabold">Education Law</h2>
+                <p class="font-poppins font-normal text-base ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <div class="card-actions">
+                  <button><svg width="32.500000" height="32.500000" viewBox="0 0 32.5 32.5" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <defs/>
+                    <path id="Vector" d="M16.25 0C7.27 0 0 7.27 0 16.25C0 25.22 7.27 32.5 16.25 32.5C25.22 32.5 32.5 25.22 32.5 16.25C32.5 7.27 25.22 0 16.25 0ZM23.38 17.13C23.61 16.89 23.74 16.58 23.74 16.25C23.74 15.91 23.61 15.6 23.38 15.36L18.38 10.36C18.26 10.24 18.13 10.14 17.97 10.07C17.82 10 17.65 9.97 17.49 9.96C17.32 9.96 17.15 9.99 17 10.05C16.84 10.12 16.7 10.21 16.58 10.33C16.46 10.45 16.37 10.59 16.3 10.75C16.24 10.9 16.21 11.07 16.21 11.24C16.22 11.4 16.25 11.57 16.32 11.72C16.39 11.88 16.49 12.01 16.61 12.13L19.48 15L10 15C9.66 15 9.35 15.13 9.11 15.36C8.88 15.6 8.75 15.91 8.75 16.25C8.75 16.58 8.88 16.89 9.11 17.13C9.35 17.36 9.66 17.5 10 17.5L19.48 17.5L16.61 20.36C16.49 20.48 16.39 20.61 16.32 20.77C16.25 20.92 16.22 21.09 16.21 21.25C16.21 21.42 16.24 21.59 16.3 21.74C16.37 21.9 16.46 22.04 16.58 22.16C16.7 22.28 16.84 22.37 17 22.44C17.15 22.5 17.32 22.53 17.49 22.53C17.65 22.52 17.82 22.49 17.97 22.42C18.13 22.35 18.26 22.25 18.38 22.13L23.38 17.13Z" fill="#B68C5A" fill-opacity="1.000000" fill-rule="evenodd"/>
+                  </svg>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- card 5 -->
+          <div class="">
+            <div class="bg-gradient-to-b from-[#F3F3F3] card bg-base-100 w-fit shadow-xl border">
+              <figure class="px-10 pt-10">
+                <img
+                  src="images/divorce.png"
+                  alt="Shoes"
+                  class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="text-3xl font-eb-garamond font-extrabold">Divorce Law</h2>
+                <p class="font-poppins font-normal text-base ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <div class="card-actions">
+                  <button><svg width="32.500000" height="32.500000" viewBox="0 0 32.5 32.5" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <defs/>
+                    <path id="Vector" d="M16.25 0C7.27 0 0 7.27 0 16.25C0 25.22 7.27 32.5 16.25 32.5C25.22 32.5 32.5 25.22 32.5 16.25C32.5 7.27 25.22 0 16.25 0ZM23.38 17.13C23.61 16.89 23.74 16.58 23.74 16.25C23.74 15.91 23.61 15.6 23.38 15.36L18.38 10.36C18.26 10.24 18.13 10.14 17.97 10.07C17.82 10 17.65 9.97 17.49 9.96C17.32 9.96 17.15 9.99 17 10.05C16.84 10.12 16.7 10.21 16.58 10.33C16.46 10.45 16.37 10.59 16.3 10.75C16.24 10.9 16.21 11.07 16.21 11.24C16.22 11.4 16.25 11.57 16.32 11.72C16.39 11.88 16.49 12.01 16.61 12.13L19.48 15L10 15C9.66 15 9.35 15.13 9.11 15.36C8.88 15.6 8.75 15.91 8.75 16.25C8.75 16.58 8.88 16.89 9.11 17.13C9.35 17.36 9.66 17.5 10 17.5L19.48 17.5L16.61 20.36C16.49 20.48 16.39 20.61 16.32 20.77C16.25 20.92 16.22 21.09 16.21 21.25C16.21 21.42 16.24 21.59 16.3 21.74C16.37 21.9 16.46 22.04 16.58 22.16C16.7 22.28 16.84 22.37 17 22.44C17.15 22.5 17.32 22.53 17.49 22.53C17.65 22.52 17.82 22.49 17.97 22.42C18.13 22.35 18.26 22.25 18.38 22.13L23.38 17.13Z" fill="#B68C5A" fill-opacity="1.000000" fill-rule="evenodd"/>
+                  </svg>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- card 6 -->
+          <div class="">
+            <div class="bg-gradient-to-b from-[#F3F3F3] card bg-base-100 w-fit shadow-xl border">
+              <figure class="px-10 pt-10">
+                <img
+                  src="images/tax.png"
+                  alt="Shoes"
+                  class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="text-3xl font-eb-garamond font-extrabold">Tax Law</h2>
+                <p class="font-poppins font-normal text-base ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+                <div class="card-actions">
+                  <button><svg width="32.500000" height="32.500000" viewBox="0 0 32.5 32.5" fill="none" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <defs/>
+                    <path id="Vector" d="M16.25 0C7.27 0 0 7.27 0 16.25C0 25.22 7.27 32.5 16.25 32.5C25.22 32.5 32.5 25.22 32.5 16.25C32.5 7.27 25.22 0 16.25 0ZM23.38 17.13C23.61 16.89 23.74 16.58 23.74 16.25C23.74 15.91 23.61 15.6 23.38 15.36L18.38 10.36C18.26 10.24 18.13 10.14 17.97 10.07C17.82 10 17.65 9.97 17.49 9.96C17.32 9.96 17.15 9.99 17 10.05C16.84 10.12 16.7 10.21 16.58 10.33C16.46 10.45 16.37 10.59 16.3 10.75C16.24 10.9 16.21 11.07 16.21 11.24C16.22 11.4 16.25 11.57 16.32 11.72C16.39 11.88 16.49 12.01 16.61 12.13L19.48 15L10 15C9.66 15 9.35 15.13 9.11 15.36C8.88 15.6 8.75 15.91 8.75 16.25C8.75 16.58 8.88 16.89 9.11 17.13C9.35 17.36 9.66 17.5 10 17.5L19.48 17.5L16.61 20.36C16.49 20.48 16.39 20.61 16.32 20.77C16.25 20.92 16.22 21.09 16.21 21.25C16.21 21.42 16.24 21.59 16.3 21.74C16.37 21.9 16.46 22.04 16.58 22.16C16.7 22.28 16.84 22.37 17 22.44C17.15 22.5 17.32 22.53 17.49 22.53C17.65 22.52 17.82 22.49 17.97 22.42C18.13 22.35 18.26 22.25 18.38 22.13L23.38 17.13Z" fill="#B68C5A" fill-opacity="1.000000" fill-rule="evenodd"/>
+                  </svg>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     
 </body>
 </html>
