added FAQ section

--- a/index.html
+++ b/index.html
@@ -250,8 +250,8 @@
           </div>
         </div>
       </section>
-         <!-- What Our Client Say section -->
-         <section class="text-center py-32">
+      <!-- What Our Client Say section -->
+      <section class="text-center py-32">
           <h1 class="font-eb-garamond font-extrabold text-4xl">What Our Client Say</h1>
           <p class="font-poppins font-normal text-base mt-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
           <div>
@@ -299,6 +299,48 @@
               </div>
             </div>
           </div>
-         </section>
+      </section>
+      <!-- FAQ section -->
+      <section>
+        <div class="text-center">
+          <h1 class="font-eb-garamond font-extrabold text-4xl">Frequently Asked Any Questions</h1>
+          <p class="font-poppins font-normal text-base mt-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
+        </div>
+        <div class="flex justify-between mt-16">
+          <div class="w-1/2 ml-7">
+            <div class="collapse collapse-plus bg-base-200">
+              <input type="radio" name="my-accordion-3" checked="checked" />
+              <div class="collapse-title text-xl font-medium">Are application fee waivers available?</div>
+              <div class="collapse-content">
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200 mt-7">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+              <div class="collapse-content">
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200 mt-7">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+              <div class="collapse-content">
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+              </div>
+            </div>
+            <div class="collapse collapse-plus bg-base-200 mt-7">
+              <input type="radio" name="my-accordion-3" />
+              <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+              <div class="collapse-content">
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, . </p>
+              </div>
+            </div>
+          </div>
+          <div class="w-1/2">
+            <img src="images/faq.png" alt="">
+          </div>
+        </div>
+      </section>
 </body>
 </html>
