--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="hero-overlay bg-opacity-0"></div>
             <div class="hero-content text-neutral-content text-center">
               <div class="max-w-md">
-                <h1 class="mb-5 text-5xl font-eb-garamond text-white font-extrabold">We Provide Effective <br>Legal Solutions</h1>
+                <h1 class="mb-5 text-5xl font-eb-garamond text-white font-extrabold">We Provide Effective Legal Solutions</h1>
                 <p class="mb-5">
                   Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
                   quasi. In deleniti eaque aut repudiandae et a id nisi.
@@ -107,7 +107,7 @@
     </header>
     <main>
       <!-- The Legal Practice Area section -->
-      <section class="text-center">
+      <section class="hidden text-center">
         <h1 class="mt-28 font-eb-garamond font-extrabold text-4xl">The Legal Practice Area</h1>
         <p class="mb-16 mt-6 font-poppins font-normal text-base">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
         <div class="mx-auto grid grid-cols-1 lg:grid-cols-3 place-items-center">
