--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   </head>
 <body>
-    <header>
+    <header class="border border-black">
         <nav class="flex justify-between">
             <div class="block sm:hidden">
               <div class="navbar-start">
@@ -70,7 +70,7 @@
               </div>
             </div>
             <div>
-                <img src="images/logo2.png" alt="">
+                <img class="w-[100px] lg:w-[150px]" src="images/logo2.png" alt="">
             </div>
             
             <div class="text-[#707070] hidden sm:block">
@@ -87,7 +87,7 @@
         <div class="pt-16">
             <div
             class="hero">
-            <img src="images/banner.png" alt="">
+            <img src="images/banner.png" alt="" class="sm:min-w-96 w-full">
             <div class="hero-overlay bg-opacity-0"></div>
             <div class="hero-content text-neutral-content text-center">
               <div class="max-w-md">
@@ -107,7 +107,7 @@
     </header>
     <main>
       <!-- The Legal Practice Area section -->
-      <section class="hidden text-center">
+      <section class="text-center sm:min-w-96 w-full">
         <h1 class="mt-28 font-eb-garamond font-extrabold text-4xl">The Legal Practice Area</h1>
         <p class="mb-16 mt-6 font-poppins font-normal text-base">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
         <div class="mx-auto grid grid-cols-1 lg:grid-cols-3 place-items-center">
@@ -251,7 +251,7 @@
         </div>
       </section>
       <!-- What Our Client Say section -->
-      <section class="text-center py-32">
+      <section class="text-center py-32 sm:min-w-96 w-full">
           <h1 class="font-eb-garamond font-extrabold text-4xl">What Our Client Say</h1>
           <p class="font-poppins font-normal text-base mt-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
           <div>
@@ -301,7 +301,7 @@
           </div>
       </section>
       <!-- FAQ section -->
-      <section>
+      <section class="sm:min-w-96 w-full">
         <div class="text-center">
           <h1 class="font-eb-garamond font-extrabold text-4xl">Frequently Asked Any Questions</h1>
           <p class="font-poppins font-normal text-base mt-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
@@ -343,7 +343,7 @@
         </div>
       </section>
       <!-- Contact With Us section -->
-      <section class="py-32 text-center">
+      <section class="py-32 text-center sm:min-w-96 w-full">
         <h1 class="font-eb-garamond font-extrabold text-4xl">Contact With Us</h1>
       <p class="font-poppins font-normal text-base mt-6">There are many variations of passages of Lorem Ipsum available, but the majority have <br> suffered alteration in some form, by injected humour.</p>
         <div class="flex justify-between mt-16">
