fixed responsive width

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   </head>
 <body>
-    <header class="border border-black">
+    <header>
         <nav class="flex justify-between">
             <div class="block sm:hidden">
               <div class="navbar-start">
