--- a/index.html
+++ b/index.html
@@ -87,12 +87,13 @@
         <div class="pt-16">
             <div
             class="hero">
-            <img src="images/banner.png" alt="" class="sm:min-w-96 w-full">
+            <img src="images/banner.png" alt="" class="min-w-96 h-full lg:w-full">
             <div class="hero-overlay bg-opacity-0"></div>
             <div class="hero-content text-neutral-content text-center">
               <div class="max-w-md">
-                <h1 class="mb-5 text-5xl font-eb-garamond text-white font-extrabold">We Provide Effective Legal Solutions</h1>
-                <p class="mb-5">
+                <h1 class="mb-0 lg:mb-5 text-3xl lg:text-5xl font-eb-garamond font-extrabold text-white">
+                  We Provide Effective Legal Solutions</h1>
+                <p class="mb-0 lg:mb-5">
                   Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
                   quasi. In deleniti eaque aut repudiandae et a id nisi.
                 </p>
@@ -255,7 +256,7 @@
           <h1 class="font-eb-garamond font-extrabold text-4xl">What Our Client Say</h1>
           <p class="font-poppins font-normal text-base mt-6">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour.</p>
           <div>
-            <div class="carousel h-[500px] w-full mt-16">
+            <div class="carousel h-full lg:h-[500px] w-full mt-16">
               <div id="slide1" class="carousel-item relative w-full">
                 <img src="images/slider-1.jpg" class="w-full">
                 <div class="absolute flex flex-col items-center mx-32 mt-24">
