--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <div class="mx-auto grid grid-cols-1 lg:grid-cols-3 place-items-center">
           <!-- card 1  -->
           <div class="">
-            <div class="bg-gradient-to-b from-[#F3F3F3] card bg-base-100 w-full shadow-xl border mb-5">
+            <div class="bg-gradient-to-b from-[#F3F3F3] card bg-base-100 w-[300px] lg:w-full shadow-xl border mb-5">
               <figure class="px-10 pt-10">
                 <img
                   src="images/business.png"
@@ -137,7 +137,7 @@
 
           <!-- card 2 -->
           <div class="">
-            <div class="bg-gradient-to-b from-[#F3F3F3] card bg-base-100 w-full shadow-xl border mb-5">
+            <div class="bg-gradient-to-b from-[#F3F3F3] card bg-base-100 w-[300px] lg:w-full shadow-xl border mb-5">
               <figure class="px-10 pt-10">
                 <img
                   src="images/criminal.png"
@@ -160,7 +160,7 @@
 
           <!-- card 3 -->
           <div class="">
-            <div class="bg-gradient-to-b from-[#F3F3F3] card bg-base-100 w-full shadow-xl border mb-5">
+            <div class="bg-gradient-to-b from-[#F3F3F3] card bg-base-100 w-[300px] lg:w-full shadow-xl border mb-5">
               <figure class="px-10 pt-10">
                 <img
                   src="images/child.png"
@@ -183,7 +183,7 @@
 
           <!-- card 4 -->
           <div class="">
-            <div class="bg-gradient-to-b from-[#F3F3F3] card bg-base-100 w-fit shadow-xl border">
+            <div class="bg-gradient-to-b from-[#F3F3F3] card bg-base-100 w-[300px] lg:w-fit shadow-xl border">
               <figure class="px-10 pt-10">
                 <img
                   src="images/education.png"
@@ -206,7 +206,7 @@
 
           <!-- card 5 -->
           <div class="">
-            <div class="bg-gradient-to-b from-[#F3F3F3] card bg-base-100 w-fit shadow-xl border">
+            <div class="bg-gradient-to-b from-[#F3F3F3] card bg-base-100 w-[300px] lg:w-fit shadow-xl border">
               <figure class="px-10 pt-10">
                 <img
                   src="images/divorce.png"
@@ -229,7 +229,7 @@
 
           <!-- card 6 -->
           <div class="">
-            <div class="bg-gradient-to-b from-[#F3F3F3] card bg-base-100 w-fit shadow-xl border">
+            <div class="bg-gradient-to-b from-[#F3F3F3] card bg-base-100 w-[300px] lg:w-fit shadow-xl border">
               <figure class="px-10 pt-10">
                 <img
                   src="images/tax.png"
@@ -463,7 +463,7 @@
         </div>
         </div>
       </section>
-     
+     <!-- Footer section -->
       <footer class="footer bg-[#111111] text-base-content text-white p-10">
       
       <nav>
